--- a/views/register.html
+++ b/views/register.html
@@ -1,6 +1,8 @@
 <div class="d-flex flex-column justify-content-center align-items-center register-page-layout">
-    <span class="align-self-end back-button" title="Back"><a href="#!/"><i class='bx bx-arrow-back'></i></a></span>
-
+    <div class="d-flex justify-content-end w-75">
+        <span class="align-self-end back-button" title="Back"><a href="#!/"><i class='bx bx-arrow-back'></i></a></span>
+    </div>
+    
     <h2 id="register-title">Register here</h2>
 
     <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="register-error">
