--- a/views/landing.html
+++ b/views/landing.html
@@ -8,19 +8,19 @@
       </div>
       <div class="d-flex">
         <div class="image-layout first-note">
-          <p id="image-title">Note 1</p>
+          <p id="image-title">Note</p>
           <p id="content">Single or double quotation marks can be used on Python and JavaScript</p>
         </div>
         <div class="image-layout second-note">
-          <p id="image-title">Note 2</p>
+          <p id="image-title">Note</p>
           <p id="content">An arrow function in JavaScript does not have access to 'this' property</p>
         </div>
         <div class="image-layout first-task">
-          <p id="image-title">Task 1</p>
+          <p id="image-title">Task</p>
           <p id="content">Create an ERD <br>for the database</p>
         </div>
-        <div class="image-layout fourth-task">
-          <p id="image-title">Task 4</p>
+        <div class="image-layout second-task">
+          <p id="image-title">Task</p>
           <p id="content">Create a unit test for the new feature</p>
         </div>
       </div>
