--- a/views/task.html
+++ b/views/task.html
@@ -8,58 +8,60 @@
     </div>
   </div>
 </div> -->
-
-<div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
+<div class="task-container">
+  <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
     {{ successMessage }}
-</div>
+  </div>
 
-<div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
-    {{ errorMessage }}
-</div>
+  <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
+      {{ errorMessage }}
+  </div>
 
-<div class="modal" tabindex="-1" id="deleteModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Confirm</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>Are you sure you want to delete this task?</p>
-        </div>
-        <div class="modal-footer">
-            <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary" data-dismiss="modal" >Yes</button>
-            <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+  <div class="modal" tabindex="-1" id="deleteModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Are you sure you want to delete this task?</p>
+          </div>
+          <div class="modal-footer">
+              <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary" data-dismiss="modal" >Yes</button>
+              <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          </div>
         </div>
       </div>
-    </div>
-</div>
+  </div>
 
-<div class="row px-2 mx-2">
-    <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4 p-1" ng-repeat="task in tasks">
-        <h5>{{ task.attributes.title }}</h5>
-        <p>{{ task.attributes.description }}</p>
-        <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
-        <p>Created: {{ dateCreated }} <time>{{ task.attributes.created }}</time></p>
-        <p>Modified: {{ dateModified }} <time>{{ task.attributes.modified }}</time></p>
-        <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
-        <p>Active: {{ task.attributes.is_active }}</p>
+  <div class="row px-3 mx-3">
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="task in tasks">
+        <div class="card-layout my-4 mx-2 p-4 ">
+          <h5>{{ task.attributes.title }}</h5>
+          <p>{{ task.attributes.description }}</p>
+          <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
+          <p>Created: {{ dateCreated }} <time>{{ task.attributes.created }}</time></p>
+          <p>Modified: {{ dateModified }} <time>{{ task.attributes.modified }}</time></p>
+          <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
+          <p>Active: {{ task.attributes.is_active }}</p>
 
-        <div class="d-flex justify-content-center">
-          <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/{{ task.id }}" class="btn btn-primary mx-1" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
+          <div class="d-flex justify-content-center button-container">
+            <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/{{ task.id }}" class="btn btn-primary action-buttons-layout" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
 
-          <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger mx-1" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
+            <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger action-buttons-layout" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
 
-          <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-warning mx-1" title="Archive"><i class='bx bx-archive-in'></i></button>
+            <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-warning action-buttons-layout" title="Archive"><i class='bx bx-archive-in'></i></button>
 
-          <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-info mx-1" title="Activate"><i class='bx bx-archive-out'></i></button>
+            <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-info action-buttons-layout" title="Activate"><i class='bx bx-archive-out'></i></button>
+          </div>
         </div>
-        
-    </div>
-</div>
+      </div>
+  </div>
 
-<div class="d-flex justify-content-end">
-    <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
+  <div class="d-flex justify-content-end">
+      <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task" class="add-button"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
+  </div>
 </div>
