--- a/index.css
+++ b/index.css
@@ -347,9 +347,9 @@ input[type="submit"]:hover{
     background-color: #FF90E8;
 }
 
-.back-button-task-view {
+/* .back-button-task-view {
     transform: translateY(-100%);
-}
+} */
 
 .back-button:hover {
     background: #23A094;
@@ -384,7 +384,7 @@ input[type="submit"]:hover{
     box-shadow: 5px 5px 0px #000000;
 }
 
-.task-container, .note-container, .task-view-container {
+.task-container, .note-container, .task-view-container, .create-task-container {
     position: relative;
     width: 100%;
     background: #D9D9D9;
@@ -426,13 +426,13 @@ input[id="status"], input[id="status"]:focus {
     border: 3px solid black;
 }
 
-.task-view-form {
+.task-view-form, .create-task-form {
     background: #23A094;
     border: 3px solid black;
     box-shadow: 5px 5px 0 black;
 }
 
-.task-view-form label {
+.task-view-form label, .create-task-form label {
     font-weight: 400;
     font-size: 25px;
     line-height: 20px;
@@ -440,7 +440,8 @@ input[id="status"], input[id="status"]:focus {
     margin: 15px auto;
 }
 
-.task-view-form button, .task-view-form button:hover {
+.task-view-form button, .task-view-form button:hover, .task-view-form button:disabled,
+.create-task-form button, .create-task-form button:hover {
     border: 2px solid black;
     box-shadow: 3px 3px 0 black;
     border-radius: 5px;
@@ -448,6 +449,11 @@ input[id="status"], input[id="status"]:focus {
     font-size: 16px;
     letter-spacing: 0.05em;
     margin: 0 5px;
+}
+
+.create-task-title {
+    letter-spacing: 0.05em;
+    font-size: 2.5em;
 }
 
 @media(max-width: 1200px) {
