--- a/views/createNote.html
+++ b/views/createNote.html
@@ -14,7 +14,7 @@
           <label for="content">Content</label>
           <textarea ng-model="newNote.content" class="form-control" id="content" placeholder="Enter content"></textarea>
         </div>
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-sm-center justify-content-md-end">
             <button type="submit" class="btn btn-primary ml-1">Save</button>
             <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
         </div>
