--- a/views/createTask.html
+++ b/views/createTask.html
@@ -18,7 +18,7 @@
             <label for="deadline">Deadline</label>
             <input ng-model="newTask.deadline" type="date" class="form-control" id="deadline"></input>
           </div>
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-sm-center justify-content-md-end">
             <button type="submit" class="btn btn-primary ml-1">Save</button>
             <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
         </div>
