--- a/views/users.html
+++ b/views/users.html
@@ -1,20 +1,25 @@
-<div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
-    {{ successMessage }}
-</div>
-
-<div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
-    {{ errorMessage }}
-</div>
-
-<div class="row px-2 mx-2">
-    <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4 p-1" ng-repeat="user in users">
-        <h2>{{ user.attributes.username }}</h2>
-        <p>Fullname: {{ user.attributes.first_name }} {{ user.attributes.last_name }}</p>
-        <p>Email: {{ user.attributes.email }}</p>
-        <p>Admin: {{ user.attributes.is_superuser }}</p>
-
-        <button ng-show="user.attributes.is_superuser == false" ng-click="setAsAdmin(user.id)" class="btn btn-primary" title="Set user as admin"><i class='bx bx-user-plus'></i></button>
-
-        <button ng-show="user.attributes.is_superuser == true && user.attributes.username != 'edmar'" ng-click="setAsNormalUser(user.id)" class="btn btn-info" title="Set as normal user"><i class='bx bx-user-x'></i></button>
+<div class="users-container">
+    <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
+        {{ successMessage }}
+    </div>
+    
+    <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
+        {{ errorMessage }}
+    </div>
+    
+    <div class="row px-3 mx-3">
+        <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="user in users">
+            <div class="card-layout my-4 mx-2 p-4 ">
+                <h2>{{ user.attributes.username }}</h2>
+                <p>Fullname: {{ user.attributes.first_name }} {{ user.attributes.last_name }}</p>
+                <p>Email: {{ user.attributes.email }}</p>
+                <p>Admin: {{ user.attributes.is_superuser }}</p>
+        
+                <button ng-show="user.attributes.is_superuser == false" ng-click="setAsAdmin(user.id)" class="btn btn-primary" title="Set user as admin"><i class='bx bx-user-plus'></i></button>
+        
+                <button ng-show="user.attributes.is_superuser == true && user.attributes.username != 'edmar'" ng-click="setAsNormalUser(user.id)" class="btn btn-info" title="Set as normal user"><i class='bx bx-user-x'></i></button>
+            </div>
+            
+        </div>
     </div>
 </div>
