--- a/views/createTask.html
+++ b/views/createTask.html
@@ -15,9 +15,20 @@
           <textarea ng-model="newTask.description" class="form-control" id="description" placeholder="Enter description"></textarea>
         </div>
         <div class="form-group">
-            <label for="deadline">Deadline</label>
-            <input ng-model="newTask.deadline" type="date" class="form-control" id="deadline"></input>
-          </div>
+          <label for="deadline">Deadline</label>
+          <input ng-model="newTask.deadline" type="date" class="form-control" id="deadline"></input>
+        </div>
+        <div class="form-group">
+          <label for="color">Color</label>
+          <select ng-model="newTask.color" id="color" class="form-control">
+            <option value=""></option>
+            <option value="Green">Green</option>
+            <option value="Pink">Pink</option>
+            <option value="Red">Red</option>
+            <option value="White">White</option>
+            <option value="Yellow">Yellow</option>
+          </select>
+        </div>
         <div class="d-flex justify-content-sm-center justify-content-md-end">
             <button type="submit" class="btn btn-primary ml-1">Save</button>
             <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
