--- a/views/task.html
+++ b/views/task.html
@@ -39,7 +39,7 @@
 
   <div class="row px-3 mx-3">
       <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="task in tasks">
-        <div class="card-layout my-4 mx-2 p-4">
+        <div ng-class="task.attributes.color" class="card-layout my-4 mx-2 p-4">
           <h5>{{ task.attributes.title }}</h5>
           <p>{{ task.attributes.description }}</p>
           <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
