--- a/views/noteView.html
+++ b/views/noteView.html
@@ -17,6 +17,17 @@
           <label for="description">Description</label>
           <textarea ng-model="specificNote.content" class="form-control" id="description" placeholder="Enter content" ng-readonly="readOnly"></textarea>
         </div>
+        <div class="form-group">
+          <label for="color">Color</label>
+          <select ng-model="specificNote.color" ng-init="specificNote.color = specificNote.color || ''" ng-disabled="readOnly" id="color" class="form-control">
+            <option value=""></option>
+            <option value="Green">Green</option>
+            <option value="Pink">Pink</option>
+            <option value="Red">Red</option>
+            <option value="White">White</option>
+            <option value="Yellow">Yellow</option>
+          </select>
+        </div>
         <div class="d-flex justify-content-sm-center justify-content-md-end">
             <button ng-click="toggleReadOnly()" class="btn btn-success ml-1">Edit</button>
             <button ng-click="updateNote(specificNote.id)" type="submit" class="btn btn-primary ml-1" ng-disabled="readOnly">Save</button>
