--- a/views/task.html
+++ b/views/task.html
@@ -9,9 +9,36 @@
   </div>
 </div> -->
 <div class="task-container">
-  <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
-    {{ successMessage }}
+
+  <div aria-live="polite" aria-atomic="true" style="position: relative;">
+    <!-- <div ng-if="loginError" ng-class="{'toast show': true, 'hide': loginError == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
+      <div class="toast-header">
+        <strong class="mr-auto">Login error</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        {{ loginError }}
+      </div>
+    </div> -->
+
+    <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 10px; right: 10px; z-index: 1;">
+      <div class="toast-header">
+        <strong class="mr-auto">Login success</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        {{ successMessage }}
+      </div>
+    </div>
   </div>
+
+  <!-- <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
+    {{ successMessage }}
+  </div> -->
 
   <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
       {{ errorMessage }}
