Add a success message on logout

--- a/views/landing.html
+++ b/views/landing.html
@@ -43,7 +43,7 @@
 
         <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
           <div class="toast-header">
-            <strong class="mr-auto">Login success</strong>
+            <strong class="mr-auto">Log out success</strong>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
