--- a/views/task.html
+++ b/views/task.html
@@ -1,31 +1,21 @@
-<!-- <div class="position-fixed top-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
-  <div ng-if="successMessage" id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000">
-    <div class="toast-header">
-      <h5>TaskMaster</h5>
-    </div>
-    <div class="toast-body">
-        {{ successMessage }}
-    </div>
-  </div>
-</div> -->
 <div class="task-container">
 
   <div aria-live="polite" aria-atomic="true" style="position: relative;">
-    <!-- <div ng-if="loginError" ng-class="{'toast show': true, 'hide': loginError == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
+    <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
       <div class="toast-header">
-        <strong class="mr-auto">Login error</strong>
+        <strong class="mr-auto">Error</strong>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="toast-body">
-        {{ loginError }}
+        {{ errorMessage }}
       </div>
-    </div> -->
+    </div>
 
     <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 10px; right: 10px; z-index: 1;">
       <div class="toast-header">
-        <strong class="mr-auto">Login success</strong>
+        <strong class="mr-auto">Operation success</strong>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -40,9 +30,9 @@
     {{ successMessage }}
   </div> -->
 
-  <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
+  <!-- <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
       {{ errorMessage }}
-  </div>
+  </div> -->
 
   <div class="modal" tabindex="-1" id="deleteModal">
       <div class="modal-dialog">
