--- a/views/taskView.html
+++ b/views/taskView.html
@@ -1,14 +1,41 @@
 <div class="task-view-container d-flex flex-column justify-content-center align-items-center p-5">
 
-  <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="error-alert">
+  <!-- <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="error-alert">
     {{ errorMessage }}
   </div>
 
   <div ng-if="taskDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="task-does-not-exist-error">
     {{ taskDoesNotExistError }}
-  </div>
+  </div> -->
 
   <form class="task-view-form w-75 p-5">
+
+    <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
+      <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="mr-auto">Error</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          {{ errorMessage }}
+        </div>
+      </div>
+  
+      <div ng-if="taskDoesNotExistError" ng-class="{'toast show': true, 'hide': taskDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 10px; right: 10px; z-index: 1;">
+        <div class="toast-header">
+          <strong class="mr-auto">Error</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          {{ taskDoesNotExistError }}
+        </div>
+      </div>
+    </div>
+
     <div class="form-group">
         <label for="title">Title</label>
         <input ng-model="specificTask.title" ng-readonly="readOnly" type="text" class="form-control" id="title" >
