--- a/views/taskView.html
+++ b/views/taskView.html
@@ -23,7 +23,7 @@
         </div>
       </div>
   
-      <div ng-if="taskDoesNotExistError" ng-class="{'toast show': true, 'hide': taskDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 10px; right: 10px; z-index: 1;">
+      <div ng-if="taskDoesNotExistError" ng-class="{'toast show': true, 'hide': taskDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
           <strong class="mr-auto">Error</strong>
           <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
